src/objects/ints__Account_Details__c.object
<CustomObject>
    <fields>
        <fullName>ints__AccountId__c</fullName>
        <inlineHelpText>Account Id</inlineHelpText>
        <label>Credit Account Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__AccountName__c</fullName>
        <inlineHelpText>Account Name</inlineHelpText>
        <label>Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__AccountNumber__c</fullName>
        <inlineHelpText>Account Number</inlineHelpText>
        <label>Account Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__AccountTypeId__c</fullName>
        <inlineHelpText>AccountTypeId</inlineHelpText>
        <label>Account Type Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__AccountType__c</fullName>
        <inlineHelpText>Account Type</inlineHelpText>
        <label>Account Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__AvailableBalanceAmount__c</fullName>
        <inlineHelpText>Available Balance Amount</inlineHelpText>
        <label>Available Balance Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ints__BalanceAmount__c</fullName>
        <inlineHelpText>Balance Amount</inlineHelpText>
        <label>Balance Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ints__CurrencyType__c</fullName>
        <inlineHelpText>Currency Type</inlineHelpText>
        <label>Currency Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__CustomerId__c</fullName>
        <inlineHelpText>Customer Id</inlineHelpText>
        <label>Customer Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__DataIndicator__c</fullName>
        <inlineHelpText>DataIndicator</inlineHelpText>
        <label>Data Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__DirectDepositAmount__c</fullName>
        <inlineHelpText>Direct Deposit Amount</inlineHelpText>
        <label>Direct Deposit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ints__DirectDepositPayCycle__c</fullName>
        <inlineHelpText>Direct Deposit Pay Cycle</inlineHelpText>
        <label>Direct Deposit Pay Cycle</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__IsMultipleCard__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Multiple Card</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ints__Microbilt_Information__c</fullName>
        <inlineHelpText>Microbilt Information</inlineHelpText>
        <label>Microbilt Information</label>
        <referenceTo>ints__Microbilt_Information__c</referenceTo>
        <relationshipName>Account_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ints__ParentAcctNumber__c</fullName>
        <inlineHelpText>Parent Account Number</inlineHelpText>
        <label>Parent Account Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__Position__c</fullName>
        <inlineHelpText>Position</inlineHelpText>
        <label>Position</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__QAs__c</fullName>
        <inlineHelpText>QAs</inlineHelpText>
        <label>QAs</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__RegisteredUser__c</fullName>
        <inlineHelpText>Registered User</inlineHelpText>
        <label>Registered User</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Microbilt Account Detail</label>
    <nameField>
        <displayFormat>AD - {000000}</displayFormat>
        <label>Account Details Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Microbilt Account Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>